# ferriskey

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  GEMINI.md  MAINTAINERS.md  PROMPT_AEGIS_HTTP.md  README.md  TOKEN_INTROSPECTION_TODO.md  docker-compose.ssl.yaml  docker-compose.yaml  docker-compose.yml  justfile  prompt.md
api/: Cargo.toml  build.rs  docker-compose.yaml  env.sh
api/.sqlx/: query-c1f33714f096cf34f91fca9ab597b2d88ca586e9f5e54ca23b02f120a5d73bdc.json
api/migrations/: 20250320192139_add_clients.up.sql  20250323235038_add_users.up.sql  20250323235041_add_credentials.up.sql  20250424150019_create_role.up.sql
api/src/: args.rs  lib.rs  main.rs
api/src/application/: auth.rs  decoded_token.rs  http.rs
api/src/entity/: auth_sessions.rs  broker_auth_sessions.rs  client_scope_mappings.rs  client_scopes.rs  clients.rs  compass_flow_steps.rs  compass_flows.rs  credentials.rs  identity_provider_links.rs  identity_providers.rs  magic_links.rs  mod.rs  post_logout_redirect_uris.rs  prelude.rs  realm_settings.rs  realms.rs  redirect_uris.rs  refresh_tokens.rs  roles.rs  user_federation_mappings.rs  user_federation_providers.rs  user_role.rs  users.rs  webhook_subscribers.rs  webhooks.rs
api/src/lib/: domain.rs  env.rs
api/tests/: account_lockout_test.rs  device_flow_test.rs  login_aliases_test.rs  nonce_id_token_test.rs  organization_test.rs  password_policy_test.rs  pkce_test.rs  portal_theme_test.rs  rate_limit_test.rs  realm_branding_test.rs  refresh_token_rotation_test.rs  session_management_test.rs  token_basic_auth_test.rs
api/tests/it/: main.rs
benchmarks/: Cargo.toml
benchmarks/benches/: realm.rs  token.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/benches/: permissions.rs
core/migrations/: 20250812143246_add_temporary_column_credentials.down.sql  20250812143246_add_temporary_column_credentials.up.sql  20250823153514_add_direct_access_grants_enabled_to_clients.down.sql  20250823153514_add_direct_access_grants_enabled_to_clients.up.sql  20250915150230_alter_unique_credentials_type_per_user_constraint.down.sql  20250923125100_add_webauthn_challenge_to_auth_sessions.down.sql  20250923125100_add_webauthn_challenge_to_auth_sessions.up.sql  20250927172043_add_webauthn_fields_credential_table.up.sql  20251023173322_create_security_events.down.sql  20251023173322_create_security_events.up.sql  20251105100544_create_ldap_providers.down.sql  20251105100544_create_ldap_providers.up.sql  20251128072713_alter_auth_sessions_state_nonce_to_text.down.sql  20251128072713_alter_auth_sessions_state_nonce_to_text.up.sql  20251128072714_alter_webhook_add_headers.down.sql  20251128072714_alter_webhook_add_headers.up.sql  20251128072715_create-user-federation.down.sql  20251128072715_create-user-federation.up.sql  20251128072716_create-identity-providers.down.sql  20251128072716_create-identity-providers.up.sql  20260117232537_remove_provider_id_from_identity_providers.down.sql  20260117232537_remove_provider_id_from_identity_providers.up.sql  20260118000303_create-broker-auth-sessions.down.sql  20260118000303_create-broker-auth-sessions.up.sql  20260124000000_add_unique_email_per_realm.down.sql  20260124000000_add_unique_email_per_realm.up.sql  20260208120000_create-access-tokens.down.sql  20260208120000_create-access-tokens.up.sql  20260209000001_create_client_scopes.down.sql  20260209000001_create_client_scopes.up.sql  20260209000002_create_client_scope_attributes.down.sql  20260209000002_create_client_scope_attributes.up.sql  20260209000003_create_client_scope_protocol_mappers.down.sql  20260209000003_create_client_scope_protocol_mappers.up.sql  20260209000004_create_client_scope_mappings.down.sql  20260209000004_create_client_scope_mappings.up.sql  20260209000005_add-delete-cascade-realm.down.sql  20260209000005_add-delete-cascade-realm.up.sql  20260209000006_create_magic_links.down.sql  20260209000006_create_magic_links.up.sql  (+96 more)
core/src/: lib.rs
core/src/application/: aegis.rs  identity_provider.rs  mod.rs  services.rs
core/src/domain/: mod.rs
core/src/entity/: access_tokens.rs  auth_sessions.rs  broker_auth_sessions.rs  client_maintenance_whitelist.rs  client_scope_attributes.rs  client_scope_mappings.rs  client_scope_protocol_mappers.rs  client_scopes.rs  clients.rs  compass_flow_steps.rs  compass_flows.rs  credentials.rs  data_migrations.rs  device_auth_sessions.rs  email_templates.rs  email_verification_tokens.rs  identity_provider_links.rs  identity_providers.rs  jwt_keys.rs  ldap_providers.rs  magic_links.rs  mod.rs  organization_attributes.rs  organization_group_attributes.rs  organization_group_members.rs  organization_group_roles.rs  organization_groups.rs  organization_member_roles.rs  organization_members.rs  organizations.rs  password_policy.rs  password_reset_tokens.rs  portal_layouts.rs  portal_themes.rs  post_logout_redirect_uris.rs  prelude.rs  realm_branding.rs  realm_maintenance_whitelist.rs  realm_portal_configs.rs  realm_settings.rs  (+15 more)
core/src/infrastructure/: email.rs  mod.rs  repositories.rs  user.rs
libs/domain/: Cargo.toml
libs/domain/src/: lib.rs
libs/ferriskey-abyss/: Cargo.toml  README.md
libs/ferriskey-abyss/src/: common.rs  lib.rs
libs/ferriskey-aegis/: Cargo.toml  README.md
libs/ferriskey-aegis/src/: entities.rs  lib.rs  policies.rs  ports.rs  value_objects.rs
libs/ferriskey-compass/: Cargo.toml  README.md
libs/ferriskey-compass/src/: entities.rs  lib.rs  policies.rs  ports.rs  recorder.rs  value_objects.rs
libs/ferriskey-domain/: Cargo.toml  README.md
libs/ferriskey-domain/src/: lib.rs  token_lifetime.rs
libs/ferriskey-notify/: Cargo.toml
libs/ferriskey-notify/src/: lib.rs
libs/ferriskey-organization/: Cargo.toml  README.md
libs/ferriskey-organization/src/: entities.rs  group_services.rs  lib.rs  policies.rs  ports.rs  services.rs
libs/ferriskey-security/: Cargo.toml  README.md
libs/ferriskey-security/src/: lib.rs
libs/webhook/: Cargo.toml
libs/webhook/src/: entities.rs  (+1 more)
(+1840 files in other folders)
