[workspace]
members = ["core", "api", "operator","client", "libs/maskass", "libs/ferriskey-security", "libs/ferriskey-domain", "libs/ferriskey-trident", "libs/ferriskey-abyss", "libs/ferriskey-aegis", "libs/ferriskey-compass", "libs/ferriskey-mail", "libs/ferriskey-wasm", "libs/ferriskey-wasm/guest"]
resolver = "2"
exclude = ["examples/wasm-extensions/logger"]

[workspace.package]
version = "0.1.0"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]
edition = "2024"
