[workspace]
members = ["core", "api", "operator","client", "libs/maskass", "libs/ferriskey-security", "libs/ferriskey-domain", "libs/ferriskey-trident", "libs/ferriskey-abyss", "libs/ferriskey-aegis", "libs/ferriskey-compass", "libs/ferriskey-mail", "libs/ferriskey-migrate"]
resolver = "2"

[workspace.package]
version = "0.4.3"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]
edition = "2024"
