[package]
name = "core"
version = "0.1.0"
edition = "2024"
description = "Core business logic library for Ferriskey"

[lib]
name = "ferriskey_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
uuid.workspace = true
