[package]
name = "ferriskey-abyss"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ferriskey-domain = { path = "../ferriskey-domain" }
maskass = { path = "../maskass" }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.41", features = ["attributes"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
mockall = { version = "0.14.0", optional = true }

[features]
mock = ["mockall"]
