[package]
name = "ferriskey-aegis"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
ferriskey-domain = { path = "../ferriskey-domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
uuid = { version = "1.21.0", features = ["serde"] }

[dev-dependencies]
mockall = "0.14.0"
