[package]
name = "webhook"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ferriskey-domain = { path = "../domain" }
chrono = { version = "0.4.43", features = ["serde"] }
serde = "1.0.228"
utoipa = "5.4.0"
uuid = { version = "1.19.0", features = ["v7"] }
mockall = "0.14.0"
